--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,10 @@
 
     <!-- PWA manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap"
+    rel="stylesheet"
+    />
 
     <!-- page title -->
     <title>Weave Haven</title>
